Add models.sources to copy forcing sources behavior. Update docs.

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -31,18 +31,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb1ac94b",
+   "id": "e8b58319",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from rich import print\n",
+    "\n",
     "import ewatercycle.models"
    ]
   },
@@ -54,15 +48,65 @@
     "tags": []
    },
    "source": [
-    "eWaterCycle currently integrates the following models:\n",
+    "In eWaterCycle models can be added as plugins. The ewatercycle package itself does not ship with any models.\n",
+    "Depending on who set up your system, some or all of the following models will already be available:\n",
     "\n",
-    "* [wflow](https://ewatercycle.readthedocs.io/en/latest/examples/wflow.html)\n",
-    "* [pcrglobwb](https://ewatercycle.readthedocs.io/en/latest/examples/pcrglobwb.html)\n",
-    "* [marrmot M01](https://ewatercycle.readthedocs.io/en/latest/examples/marrmotm01.html)\n",
-    "* [marrmot M14](https://ewatercycle.readthedocs.io/en/latest/examples/marrmotm14.html)\n",
-    "* [lisflood](https://ewatercycle.readthedocs.io/en/latest/examples/lisflood.html)\n",
+    "* [\"leaky bucket\" toy model](https://github.com/eWaterCycle/ewatercycle-leakybucket)\n",
+    "* [wflow](https://github.com/eWaterCycle/ewatercycle-wflow)\n",
+    "* [pcrglobwb](https://github.com/eWaterCycle/ewatercycle-pcrglobwb)\n",
+    "* [marrmot M01](https://github.com/eWaterCycle/ewatercycle-marrmot)\n",
+    "* [marrmot M14](https://github.com/eWaterCycle/ewatercycle-marrmot)\n",
+    "* [lisflood](https://github.com/eWaterCycle/ewatercycle-lisflood)\n",
     "\n",
-    "and we're expecting to add more models soon. The process for adding new models is documented in [Adding models](https://ewatercycle.readthedocs.io/en/latest/adding_models.html)"
+    "The process for adding new models is documented in [Adding models](https://ewatercycle.readthedocs.io/en/latest/adding_models.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f9f7e91",
+   "metadata": {},
+   "source": [
+    "To show the currently available models do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7196661d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">ModelSources</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"Hype\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"LeakyBucket\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"Lisflood\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"MarrmotM01\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"MarrmotM14\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"PCRGlobWB\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"Wflow\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[34mModelSources\u001b[0m\u001b[1;34m[\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"Hype\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"LeakyBucket\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"Lisflood\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"MarrmotM01\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"MarrmotM14\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"PCRGlobWB\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"Wflow\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[1;34m]\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(ewatercycle.models.sources)"
    ]
   },
   {
@@ -92,11 +136,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ewatercycle.parameter_sets\n",
     "import ewatercycle.forcing\n",
     "import ewatercycle.models\n",
+    "import ewatercycle.parameter_sets\n",
     "\n",
-    "parameter_set = ewatercycle.parameter_sets.available_parameter_sets(target_model=\"wflow\")[\"wflow_rhine_sbm_nc\"]\n",
+    "parameter_set = ewatercycle.parameter_sets.available_parameter_sets(\n",
+    "    target_model=\"wflow\"\n",
+    ")[\"wflow_rhine_sbm_nc\"]\n",
     "forcing = ewatercycle.forcing.sources[\"WflowForcing\"](\n",
     "    directory=str(parameter_set.directory),\n",
     "    start_time=\"1991-01-01T00:00:00Z\",\n",
@@ -293,7 +339,9 @@
     "    # Here you could do whatever you like, e.g. update soil moisture values before doing the next timestep.\n",
     "\n",
     "    print(\n",
-    "        model_instance.time_as_isostr, end=\"\\r\", flush=True,\n",
+    "        model_instance.time_as_isostr,\n",
+    "        end=\"\\r\",\n",
+    "        flush=True,\n",
     "    )  # \"\\r\" clears the output before printing the next timestamp"
    ]
   },
