Add model.setup(cfg_dir=...) example to user guide (#232 )

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -33,7 +33,15 @@
    "execution_count": 2,
    "id": "e8b58319",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n"
+     ]
+    }
+   ],
    "source": [
     "from rich import print\n",
     "\n",
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "53d63a85",
    "metadata": {},
    "outputs": [],
@@ -158,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "68325e78",
    "metadata": {},
    "outputs": [
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "45b31a03",
    "metadata": {},
    "outputs": [
@@ -200,7 +208,7 @@
        "dict_items([('start_time', '1991-01-01T00:00:00Z'), ('end_time', '1991-12-31T00:00:00Z')])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,12 +230,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d0d20ed8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg_file, cfg_dir = model_instance.setup(end_time=\"1991-12-15T00:00:00Z\")"
+    "cfg_file, cfg_dir = model_instance.setup(\n",
+    "    end_time=\"1991-12-15T00:00:00Z\",\n",
+    "    # use `cfg_dir=\"/path/to/output_dir\"` to specify the output directory\n",
+    ")"
    ]
   },
   {
