--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -99,6 +99,7 @@
    ],
    "source": [
     "from rich import print\n",
+    "\n",
     "print(ewatercycle.forcing.sources)"
    ]
   },
@@ -157,6 +158,7 @@
    ],
    "source": [
     "from ewatercycle.parameter_sets import available_parameter_sets\n",
+    "\n",
     "parameter_set = available_parameter_sets(target_model=\"wflow\")[\"wflow_rhine_sbm_nc\"]\n",
     "\n",
     "forcing = ewatercycle.forcing.sources[\"WflowForcing\"](\n",
@@ -336,9 +338,9 @@
     }
    ],
    "source": [
-    "# See https://www.climate4impact.eu/c4i-frontend/search for an overview of models, \n",
+    "# See https://www.climate4impact.eu/c4i-frontend/search for an overview of models,\n",
     "# experiments, and ensemble members.\n",
-    "cmip_dataset = {  \n",
+    "cmip_dataset = {\n",
     "    \"dataset\": \"EC-Earth3\",  # Name of the model\n",
     "    \"project\": \"CMIP6\",\n",
     "    \"grid\": \"gr\",\n",
@@ -457,7 +459,11 @@
     "    end_time=\"2001-01-01T00:00:00Z\",\n",
     "    dataset=cmip_dataset,\n",
     "    shape=shape,\n",
-    "    variables=(\"pr\", \"tas\", \"rsds\",),  # required variables\n",
+    "    variables=(\n",
+    "        \"pr\",\n",
+    "        \"tas\",\n",
+    "        \"rsds\",\n",
+    "    ),  # required variables\n",
     "    postprocessor=derive_e_pot,  # post-processing function that adds e_pot\n",
     ")"
    ]
