Update docs, changelog

--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -32,18 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b7a256d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ewatercycle.forcing"
    ]
@@ -68,28 +60,32 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">ForcingSources</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"DistributedMakkinkForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"DistributedPenmanMonteithForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"DistributedUserForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"GenericDistributedForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"GenericLumpedForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"HypeForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"LisfloodForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"LumpedMakkinkForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"LumpedPenmanMonteithForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"LumpedUserForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
-       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"WflowForcing\"</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"MarrmotForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"PCRGlobWBForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"WflowForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">]</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[34mForcingSources\u001b[0m\u001b[1;34m[\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"DistributedMakkinkForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
-       "\u001b[32m    \u001b[0m\u001b[32m\"DistributedPenmanMonteithForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"DistributedUserForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"GenericDistributedForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"GenericLumpedForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"HypeForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"LisfloodForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"LumpedMakkinkForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
-       "\u001b[32m    \u001b[0m\u001b[32m\"LumpedPenmanMonteithForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"LumpedUserForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
-       "\u001b[32m    \u001b[0m\u001b[32m\"WflowForcing\"\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"MarrmotForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"PCRGlobWBForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"WflowForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[1;34m]\u001b[0m\n"
       ]
      },
@@ -195,18 +191,13 @@
     "\n",
     "The most simple forcing available only contains NetCDF files for precipitation and air temperature. These are the \"generic\" forcing generators:\n",
     "\n",
-    "* [GenericDistributedForcing](autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericDistributedForcing) for distributed models aka grid based models\n",
-    "* [GenericLumpedForcing](autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericLumpedForcing) for lumped models aka point based models\n",
+    "* [GenericDistributedForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericDistributedForcing) for distributed models aka grid based models\n",
+    "* [GenericLumpedForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericLumpedForcing) for lumped models aka point based models\n",
     "\n",
     "Usually, (potential) evaporation is required. For this eWaterCycle includes forcing computed using Makkink's equation:\n",
     "\n",
-    "* [DistributedMakkinkForcing](autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.DistributedMakkinkForcing)\n",
-    "* [LumpedMakkinkForcing](autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.LumpedMakkinkForcing)\n",
-    "\n",
-    "If you want to compute the potential evaporation inside your model using the Penman-Monteith equation, you can use:\n",
-    "\n",
-    "* [DistributedPenmanMonteithForcing](autoapi/ewatercycle/_forcings/penman_monteith/index.html#ewatercycle._forcings.penman_monteith.DistributedPenmanMonteithForcing)\n",
-    "* [LumpedPenmanMonteithForcing](autoapi/ewatercycle/_forcings/penman_monteith/index.html#ewatercycle._forcings.penman_monteith.LumpedPenmanMonteithForcing)"
+    "* [DistributedMakkinkForcing](../autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.DistributedMakkinkForcing)\n",
+    "* [LumpedMakkinkForcing](../autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.LumpedMakkinkForcing)\n"
    ]
   },
   {
