Fix links in user-defined forcing section

--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -419,8 +419,8 @@
     "\n",
     "If you require variables that are not included in the previous examples, or need to compute a different variable for your model, you can make use of the UserForcing classes:\n",
     "\n",
-    "* [DistributedUserForcing](autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.DistributedUserForcing)\n",
-    "* [LumpedUserForcing](autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.LumpedUserForcing)\n",
+    "* [DistributedUserForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.DistributedUserForcing)\n",
+    "* [LumpedUserForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.LumpedUserForcing)\n",
     "\n",
     "For these you define the variables and a post-processing function.\n",
     "\n",
