Update model documentation

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -30,18 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e8b58319",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rich import print\n",
     "\n",
@@ -127,7 +119,9 @@
     "### Creating, setting up, and initializing a model instance\n",
     "\n",
     "The way models are created, setup, and initialized matches [PyMT](https://pymt.readthedocs.io/en/latest/quickstart.html#run-a-model) as much as possible.\n",
-    "There are three steps:\n",
+    "To see the all available methods and properties, see the [API reference for the eWaterCycleModel](../autoapi/ewatercycle/base/model/index.html#ewatercycle.base.model.eWaterCycleModel).\n",
+    "\n",
+    "There are three main steps required before running a model:\n",
     "\n",
     "- instantiate (create a python object that represents the model)\n",
     "- setup (create a container with the right model, directories, and configuration files)\n",
@@ -265,16 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c1103c60-acfd-4d85-a963-1dfda63dff05",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/bart/ewatercycle/output/wflow_20240312_151922/wflow_ewatercycle.ini\n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080\">/home/bart/ewatercycle/output/wflow_20240329_090300/</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">wflow_ewatercycle.ini</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[35m/home/bart/ewatercycle/output/wflow_20240329_090300/\u001b[0m\u001b[95mwflow_ewatercycle.ini\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "37029f39",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e04303a6",
    "metadata": {},
    "outputs": [],
@@ -326,18 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9af1524b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1991-12-15T00:00:00Z\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output = []\n",
     "while model_instance.time < model_instance.end_time:\n",
@@ -368,17 +360,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "16ad7cc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f82e83849d0>"
+       "<matplotlib.collections.QuadMesh at 0x7fdb86ee6c90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -407,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d1430796-ba02-4b77-a80d-1567e0ac7714",
    "metadata": {},
    "outputs": [
@@ -417,7 +409,7 @@
        "array([1850.8435], dtype=float32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ff7774d6",
    "metadata": {},
    "outputs": [
@@ -447,13 +439,42 @@
        "('RiverRunoff',)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model_instance.output_var_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a06cd42",
+   "metadata": {},
+   "source": [
+    "If you for some reason need to interact with the underlying Basic Model Interface of the model, you can access it in the following way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "11b9092c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sbm'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_instance.bmi.get_component_name()"
    ]
   },
   {
