--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -59,6 +59,7 @@
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">ForcingSources</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">[</span>\n",
+       "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"CaravanForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"DistributedMakkinkForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"DistributedUserForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
        "<span style=\"color: #008000; text-decoration-color: #008000\">    </span><span style=\"color: #008000; text-decoration-color: #008000\">\"GenericDistributedForcing\"</span><span style=\"color: #008000; text-decoration-color: #008000\">,</span>\n",
@@ -75,6 +76,7 @@
       ],
       "text/plain": [
        "\u001b[34mForcingSources\u001b[0m\u001b[1;34m[\u001b[0m\n",
+       "\u001b[32m    \u001b[0m\u001b[32m\"CaravanForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"DistributedMakkinkForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"DistributedUserForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
        "\u001b[32m    \u001b[0m\u001b[32m\"GenericDistributedForcing\"\u001b[0m\u001b[32m,\u001b[0m\n",
@@ -210,25 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d52b0a76",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n",
-      "ERROR 1: PROJ: proj_create_from_database: Open of /home/bart/micromamba/envs/ewc3.11/share/proj failed\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">GenericDistributedForcing</span><span style=\"font-weight: bold\">(</span>\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">start_time</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'2000-01-01T00:00:00Z'</span>,\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">end_time</span>=<span style=\"color: #008000; text-decoration-color: #008000\">'2001-01-01T00:00:00Z'</span>,\n",
-       "    <span style=\"color: #808000; text-decoration-color: #808000\">directory</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/bart/esmvaltool_output/ewcrepty2fypdu_20240312_154014/work/diagnostic/script'</span><span style=\"font-weight: bold\">)</span>,\n",
+       "    <span style=\"color: #808000; text-decoration-color: #808000\">directory</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/bart/esmvaltool_output/ewcrepr_pqguq0_20240605_140621/work/diagnostic/script'</span><span style=\"font-weight: bold\">)</span>,\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">shape</span>=<span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">PosixPath</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000\">'/home/bart/git/ewatercycle/src/ewatercycle/testing/data/Rhine/Rhine.shp'</span><span style=\"font-weight: bold\">)</span>,\n",
        "    <span style=\"color: #808000; text-decoration-color: #808000\">filenames</span>=<span style=\"font-weight: bold\">{</span>\n",
        "        <span style=\"color: #008000; text-decoration-color: #008000\">'pr'</span>: <span style=\"color: #008000; text-decoration-color: #008000\">'OBS6_ERA5_reanaly_1_day_pr_2000-2001.nc'</span>,\n",
@@ -241,7 +235,7 @@
        "\u001b[1;35mGenericDistributedForcing\u001b[0m\u001b[1m(\u001b[0m\n",
        "    \u001b[33mstart_time\u001b[0m=\u001b[32m'2000-01-01T00:00:00Z'\u001b[0m,\n",
        "    \u001b[33mend_time\u001b[0m=\u001b[32m'2001-01-01T00:00:00Z'\u001b[0m,\n",
-       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/bart/esmvaltool_output/ewcrepty2fypdu_20240312_154014/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
+       "    \u001b[33mdirectory\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/bart/esmvaltool_output/ewcrepr_pqguq0_20240605_140621/work/diagnostic/script'\u001b[0m\u001b[1m)\u001b[0m,\n",
        "    \u001b[33mshape\u001b[0m=\u001b[1;35mPosixPath\u001b[0m\u001b[1m(\u001b[0m\u001b[32m'/home/bart/git/ewatercycle/src/ewatercycle/testing/data/Rhine/Rhine.shp'\u001b[0m\u001b[1m)\u001b[0m,\n",
        "    \u001b[33mfilenames\u001b[0m=\u001b[1m{\u001b[0m\n",
        "        \u001b[32m'pr'\u001b[0m: \u001b[32m'OBS6_ERA5_reanaly_1_day_pr_2000-2001.nc'\u001b[0m,\n",
@@ -346,6 +340,27 @@
     "    shape=shape.absolute(),\n",
     ")\n",
     "print(forcing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f382f72",
+   "metadata": {},
+   "source": [
+    "### Finding climate data\n",
+    "\n",
+    "To find CMIP datasets (and their ensembles) that fit your needs, you can use the [esgf_search function from ewatercycle.esmvaltool.search](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericDistributedForcing).\n",
+    "\n",
+    "For example, to find CMIP datasets with the \"ssp585\" scenario, that can be used to generate Makkink forcing:\n",
+    "\n",
+    "```py\n",
+    "from ewatercycle.esmvaltool.search import search_esgf\n",
+    "valid_datasets = search_esgf(\n",
+    "    activity=\"ScenarioMIP\",\n",
+    "    experiment=\"ssp585\",\n",
+    "    frequency=\"day\",\n",
+    "    variables=[\"pr\", \"tas\", \"rsds\"],\n",
+    "```"
    ]
   },
   {
