Improve docs, streamline test data generation

--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -356,10 +356,10 @@
     "```py\n",
     "from ewatercycle.esmvaltool.search import search_esgf\n",
     "valid_datasets = search_esgf(\n",
-    "    activity=\"ScenarioMIP\",\n",
     "    experiment=\"ssp585\",\n",
     "    frequency=\"day\",\n",
-    "    variables=[\"pr\", \"tas\", \"rsds\"],\n",
+    "    variables=[\"pr\", \"tas\", \"rsds\"]\n",
+    "),\n",
     "```"
    ]
   },
