Make get_grdc_data return netcdf in same shape as you can download from https://portal.grdc.bafg.de/

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -612,7 +612,7 @@
     "    column=\"GRDC\",\n",
     ")\n",
     "\n",
-    "observations.to_dataframe().head()"
+    "observations.GRDC.to_dataframe().head()"
    ]
   },
   {
