Fetch usgs without cache or error and grdc return dataset (#429)
* Fetch usgs without cache or error

Fixes #414
Fixes #240
Fixes #209

* Make get_grdc_data return an xarray dataset

As xarray/netcdf has official support for attrs while pandas attrs are experimental.

Fix #253

* Fix test

* Lower case

* Make get_grdc_data return netcdf in same shape as you can download from https://portal.grdc.bafg.de/

* Make consistent

* Use datetime + massage time coordinate into datetime64[ns] + Added test for usgs xarray conversion

* Update example

* replace try with if + test else

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -605,14 +605,14 @@
    "source": [
     "grdc_station_id = \"6335020\"\n",
     "\n",
-    "observations, metadata = ewatercycle.observation.grdc.get_grdc_data(\n",
+    "observations = ewatercycle.observation.grdc.get_grdc_data(\n",
     "    station_id=grdc_station_id,\n",
     "    start_time=\"1990-01-01T00:00:00Z\",  # or: model_instance.start_time_as_isostr\n",
     "    end_time=\"1990-12-15T00:00:00Z\",\n",
     "    column=\"GRDC\",\n",
     ")\n",
     "\n",
-    "observations.head()"
+    "observations.GRDC.to_dataframe().head()"
    ]
   },
   {
@@ -639,7 +639,7 @@
     }
    ],
    "source": [
-    "print(metadata)"
+    "print(observations.attrs)"
    ]
   },
   {
