WIP: trying to fix links in notebooks by use myst compatible things

--- a/docs/user_guide/00_intro.ipynb
+++ b/docs/user_guide/00_intro.ipynb
@@ -5,12 +5,14 @@
    "execution_count": 1,
    "id": "bd2d9bd5",
    "metadata": {
-    "nbsphinx": "hidden"
+    "tags": [
+     "hide-cell"
+    ]
    },
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "# Note: this cell should be hidden with the metadata '\"nbsphinx\": \"hidden\"'\n",
+    "# Note: this cell should be hidden with the tag \"hide-cell\"\n",
     "import logging\n",
     "import warnings\n",
     "\n",
@@ -29,11 +31,11 @@
     "\n",
     "This user manual will explain how the eWaterCycle Python package can be used to perform hydrological experiments. We will walk through the following chapters:\n",
     "\n",
-    "- [parameter sets](01_parameter_sets.html)\n",
-    "- [forcing data](02_forcing.html)\n",
-    "- [model instances](03_models_obs_analysis.html)\n",
-    "- [using observations](03_models_obs_analysis.html#Observations)\n",
-    "- [analysis](03_models_obs_analysis.html#Analysis)\n",
+    "- [parameter sets](01_parameter_sets.ipynb)\n",
+    "- [forcing data](02_forcing.ipynb)\n",
+    "- [model instances](03_models_obs_analysis.ipynb)\n",
+    "- [using observations](03_models_obs_analysis.ipynb#observations)\n",
+    "- [analysis](03_models_obs_analysis.ipynb#analysis)\n",
     "\n",
     "Each of these chapters correspond to a so-called \"subpackage\" of eWaterCycle Python package. Before we continue, however, we will briefly explain the configuration file."
    ]
@@ -172,7 +174,7 @@
    "source": [
     "Note: a path on the local filesystem is always denoted as \"dir\" (short for directory), instead of folder, path, or location. Especially location can be confusing in the context of geospatial modeling.\n",
     "\n",
-    "It is also possible to store and load custom configuration files. For more information, see [system setup](../system_setup.html)"
+    "It is also possible to store and load custom configuration files. For more information, see [system setup](../system_setup.rst)"
    ]
   },
   {
