--- a/docs/user_guide/01_parameter_sets.ipynb
+++ b/docs/user_guide/01_parameter_sets.ipynb
@@ -4,11 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "bd2d9bd5",
-   "metadata": {"nbsphinx": "hidden"},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "# Note: this cell should be hidden with the metadata '\"nbsphinx\": \"hidden\"'\n",
+    "# Note: this cell should be hidden with the tag \"hide-cell\"\n",
     "import logging\n",
     "import warnings\n",
     "\n",
@@ -322,7 +326,7 @@
    "source": [
     "<div class=\"alert alert-info\">\n",
     "\n",
-    "As you can see, an eWaterCycle parameter set is defined fully by a directory and a configuration file. The configuration file typically informs the model about the structure of the parameter set (e.g. \"what is the filename of the land use data\"). It is possible to change these settings later, when [setting up the model](#Models).\n",
+    "As you can see, an eWaterCycle parameter set is defined fully by a directory and a configuration file. The configuration file typically informs the model about the structure of the parameter set (e.g. \"what is the filename of the land use data\"). It is possible to change these settings later, when [setting up the model](03_models_obs_analysis.ipynb).\n",
     "\n",
     "</div>"
    ]
