--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -5,12 +5,14 @@
    "execution_count": 1,
    "id": "bd2d9bd5",
    "metadata": {
-    "nbsphinx": "hidden"
+    "tags": [
+     "hide-cell"
+    ]
    },
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "# Note: this cell should be hidden with the metadata '\"nbsphinx\": \"hidden\"'\n",
+    "# Note: this cell should be hidden with the tag \"hide-cell\"\n",
     "import logging\n",
     "import warnings\n",
     "\n",
