--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -5,12 +5,14 @@
    "execution_count": 1,
    "id": "bd2d9bd5",
    "metadata": {
-    "nbsphinx": "hidden"
+    "tags": [
+     "hide-cell"
+    ]
    },
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "# Note: this cell should be hidden with the metadata '\"nbsphinx\": \"hidden\"'\n",
+    "# Note: this cell should be hidden with the tag \"hide-cell\"\n",
     "import logging\n",
     "import warnings\n",
     "\n",
@@ -119,7 +121,7 @@
     "### Creating, setting up, and initializing a model instance\n",
     "\n",
     "The way models are created, setup, and initialized matches [PyMT](https://pymt.readthedocs.io/en/latest/quickstart.html#run-a-model) as much as possible.\n",
-    "To see the all available methods and properties, see the [API reference for the eWaterCycleModel](../autoapi/ewatercycle/base/model/index.html#ewatercycle.base.model.eWaterCycleModel).\n",
+    "To see the all available methods and properties, see the [API reference for the eWaterCycleModel](../autoapi/ewatercycle/base/model/index.html#ewatercycle.base.model.eWaterCycleModel){.external}.\n",
     "\n",
     "There are three main steps required before running a model:\n",
     "\n",
