Switched back to autoapi + build without warnings or errors
autodoc2 does not handle google style docstrings so we switch back to the original autoapi.

--- a/docs/user_guide/02_forcing.ipynb
+++ b/docs/user_guide/02_forcing.ipynb
@@ -195,13 +195,13 @@
     "\n",
     "The most simple forcing available only contains NetCDF files for precipitation and air temperature. These are the \"generic\" forcing generators:\n",
     "\n",
-    "* [GenericDistributedForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericDistributedForcing) for distributed models aka grid based models\n",
-    "* [GenericLumpedForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericLumpedForcing) for lumped models aka point based models\n",
+    "* [GenericDistributedForcing](#ewatercycle.base.forcing.GenericDistributedForcing) for distributed models aka grid based models\n",
+    "* [GenericLumpedForcing](#ewatercycle.base.forcing.GenericLumpedForcing) for lumped models aka point based models\n",
     "\n",
     "Usually, (potential) evaporation is required. For this eWaterCycle includes forcing computed using Makkink's equation:\n",
     "\n",
-    "* [DistributedMakkinkForcing](../autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.DistributedMakkinkForcing)\n",
-    "* [LumpedMakkinkForcing](../autoapi/ewatercycle/_forcings/makkink/index.html#ewatercycle._forcings.makkink.LumpedMakkinkForcing)\n"
+    "* [DistributedMakkinkForcing](#ewatercycle._forcings.makkink.DistributedMakkinkForcing)\n",
+    "* [LumpedMakkinkForcing](#ewatercycle._forcings.makkink.LumpedMakkinkForcing)\n"
    ]
   },
   {
@@ -351,7 +351,7 @@
    "source": [
     "### Finding climate data\n",
     "\n",
-    "To find CMIP datasets (and their ensembles) that fit your needs, you can use the [esgf_search function from ewatercycle.esmvaltool.search](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.GenericDistributedForcing).\n",
+    "To find CMIP datasets (and their ensembles) that fit your needs, you can use the [esgf_search function from ewatercycle.esmvaltool.search](#ewatercycle.base.forcing.GenericDistributedForcing).\n",
     "\n",
     "For example, to find CMIP datasets with the \"ssp585\" scenario, that can be used to generate Makkink forcing:\n",
     "\n",
@@ -436,8 +436,8 @@
     "\n",
     "If you require variables that are not included in the previous examples, or need to compute a different variable for your model, you can make use of the UserForcing classes:\n",
     "\n",
-    "* [DistributedUserForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.DistributedUserForcing)\n",
-    "* [LumpedUserForcing](../autoapi/ewatercycle/base/forcing/index.html#ewatercycle.base.forcing.LumpedUserForcing)\n",
+    "* [DistributedUserForcing](#ewatercycle.base.forcing.DistributedUserForcing)\n",
+    "* [LumpedUserForcing](#ewatercycle.base.forcing.LumpedUserForcing)\n",
     "\n",
     "For these you define the variables and a post-processing function.\n",
     "\n",
