--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -5,12 +5,14 @@
    "execution_count": 1,
    "id": "bd2d9bd5",
    "metadata": {
-    "nbsphinx": "hidden"
+    "tags": [
+     "hide-cell"
+    ]
    },
    "outputs": [],
    "source": [
     "# Suppress distracting outputs in these examples\n",
-    "# Note: this cell should be hidden with the metadata '\"nbsphinx\": \"hidden\"'\n",
+    "# Note: this cell should be hidden with the tag \"hide-cell\"\n",
     "import logging\n",
     "import warnings\n",
     "\n",
@@ -116,10 +118,10 @@
    "id": "04d51cee",
    "metadata": {},
    "source": [
-    "### Creating, setting up, and initializing a model instance\n",
+    "## Creating, setting up, and initializing a model instance\n",
     "\n",
     "The way models are created, setup, and initialized matches [PyMT](https://pymt.readthedocs.io/en/latest/quickstart.html#run-a-model) as much as possible.\n",
-    "To see the all available methods and properties, see the [API reference for the eWaterCycleModel](../autoapi/ewatercycle/base/model/index.html#ewatercycle.base.model.eWaterCycleModel).\n",
+    "To see the all available methods and properties, see the [API reference for the eWaterCycleModel](#ewatercycle.base.model.eWaterCycleModel){.external}.\n",
     "\n",
     "There are three main steps required before running a model:\n",
     "\n",
@@ -306,7 +308,7 @@
    "id": "57092c12",
    "metadata": {},
    "source": [
-    "### Running (and interacting with) a model\n",
+    "## Running (and interacting with) a model\n",
     "\n",
     "A model instance can be controlled by calling functions for running a single timestep (`update`), setting variables, and getting variables. Besides the rather lowlevel BMI functions like `get_value` and `set_value`, we also added convenience functions such as `get_value_as_xarray`, `get_value_at_coords`, `time_as_datetime`, and `time_as_isostr`. These make it even more pleasant to interact with the model.\n",
     "\n",
@@ -483,7 +485,7 @@
    "id": "3fd1e737",
    "metadata": {},
    "source": [
-    "### Destroying the model\n",
+    "## Destroying the model\n",
     "\n",
     "A model instance running in a container can take up quite a bit of resources on the system. When you're done with an experiment, it is good practice to always finalize the model. This will make sure the model properly performs any tear-down tasks and eventually the container will be destroyed."
    ]
