Add model.logs to user guide

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -303,6 +303,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d94ad9b6",
+   "metadata": {},
+   "source": [
+    "Note that if anything goes wrong on the model side during initialization or at any other point in time you can inspect the model's logs. For example, if some input file is missing or corrupt.\n",
+    "In this case you would do:\n",
+    "\n",
+    "```py\n",
+    "print(model_instance.logs)\n",
+    "```"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "57092c12",
