Add HBV model link to user guide

--- a/docs/user_guide/03_models_obs_analysis.ipynb
+++ b/docs/user_guide/03_models_obs_analysis.ipynb
@@ -60,6 +60,7 @@
     "* [marrmot M14](https://github.com/eWaterCycle/ewatercycle-marrmot)\n",
     "* [lisflood](https://github.com/eWaterCycle/ewatercycle-lisflood)\n",
     "* [hype](https://github.com/eWaterCycle/ewatercycle-hype)\n",
+    "* [HBV](https://github.com/eWaterCycle/ewatercycle-hbv)\n",
     "\n",
     "The process for adding new models is documented in [Adding models](https://ewatercycle.readthedocs.io/en/latest/adding_models.html)"
    ]
